# python-scaffold

./: README.md  pyproject.toml
python_scaffold/: __init__.py  huga.py
tests/: test_python_scaffold.py
