[tool.poetry]
name = "python-scaffold"
version = "0.1.0"
description = "Scaffold for python"
authors = ["Naoki Sawada"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[tool.poetry.scripts]
run = "python_scaffold:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
